#5 #8 put useful functions into separated file

--- a/note/um_smdpl_precompute_wl_pairs.ipynb
+++ b/note/um_smdpl_precompute_wl_pairs.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-01-05T19:55:36.477730Z",
+     "start_time": "2018-01-05T19:55:36.469510Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -13,7 +18,8 @@
     "from time import time\n",
     "from astropy.table import Table\n",
     "\n",
-    "from model_predictions import precompute_lensing_pairs"
+    "from model_predictions import precompute_lensing_pairs\n",
+    "from prepare_universe_machine import precompute_lensing_pairs"
    ]
   },
   {
@@ -34,89 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "code_folding": [
-     0
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "def precompute_wl_smdpl(um_mock, sim_particles, um_min_mvir=None,\n",
-    "                        m_particle=9.63E7, n_particles_per_dim=3840,\n",
-    "                        box_size=400, h0=0.6777,\n",
-    "                        wl_min_r=0.08, wl_max_r=50.0, wl_n_bins=22,\n",
-    "                        verbose=True):\n",
-    "    \"\"\"\n",
-    "    Precompute lensing pairs using UniverseMachine SMDPL catalog.\n",
-    "\n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "\n",
-    "    sim_particles : astropy.table, optional\n",
-    "        External particle data catalog.\n",
-    "\n",
-    "    um_min_mvir : float, optional\n",
-    "        Minimum halo mass used in computation.\n",
-    "        Default: None\n",
-    "\n",
-    "    wl_min_r : float, optional\n",
-    "        Minimum radius for WL measurement.\n",
-    "        Default: 0.1\n",
-    "\n",
-    "    wl_max_r : float, optional\n",
-    "        Maximum radius for WL measurement.\n",
-    "        Default: 40.0\n",
-    "\n",
-    "    wl_n_bins : int, optional\n",
-    "        Number of bins in log(R) space.\n",
-    "        Default: 11\n",
-    "    \"\"\"\n",
-    "    n_particles_tot = (n_particles_per_dim ** 3)\n",
-    "    if verbose:\n",
-    "        print(\"#   The simulation particle mass is %f\" % m_particle)\n",
-    "        print(\"#   The number of particles is %d\" %\n",
-    "              n_particles_tot)\n",
-    "\n",
-    "    sim_downsampling_factor = (n_particles_tot /\n",
-    "                               float(len(sim_particles)))\n",
-    "\n",
-    "    if um_min_mvir is not None:\n",
-    "        sample = um_mock[um_mock['logmh_peak'] >= um_min_mvir]\n",
-    "    else:\n",
-    "        sample = um_mock\n",
-    "\n",
-    "    # Radius bins\n",
-    "    rp_bins = np.logspace(np.log10(wl_min_r),\n",
-    "                          np.log10(wl_max_r),\n",
-    "                          wl_n_bins)\n",
-    "    # Box size\n",
-    "    sim_period = box_size\n",
-    "\n",
-    "    start = time()\n",
-    "    sim_mass_encl = precompute_lensing_pairs(\n",
-    "        sample['x'], sample['y'], sample['z'],\n",
-    "        sim_particles['x'], sim_particles['y'], sim_particles['z'],\n",
-    "        m_particle, sim_downsampling_factor,\n",
-    "        rp_bins, sim_period)\n",
-    "    end = time()\n",
-    "    runtime = (end - start)\n",
-    "\n",
-    "    msg = (\"Total runtime for {0} galaxies and {1:.1e} particles \"\n",
-    "           \"={2:.2f} seconds\")\n",
-    "    print(msg.format(len(sample), len(sim_particles), runtime))\n",
-    "\n",
-    "    return sim_mass_encl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Input table\n",
     "um_smdpl_dir = '/Users/song/astro5/massive/dr16a/um2/um2_new'\n",
+    "#um_smdpl_dir = '/Users/song/data/massive/dr16a/um2/um2_new'\n",
     "um_smdpl_ptbl = os.path.join(um_smdpl_dir,\n",
     "                             'um_smdpl_particles_0.7124_50m.npy')\n",
     "um_smdpl_gtbl = os.path.join(um_smdpl_dir,\n",
@@ -125,7 +55,7 @@
     "sim_particles = Table(np.load(um_smdpl_ptbl))\n",
     "um_mock = Table(np.load(um_smdpl_gtbl))\n",
     "\n",
-    "um_mock_demo = um_mock[:10]\n",
+    "um_mock_demo = um_mock[:500]\n",
     "\n",
     "# Output file\n",
     "um_smdpl_precompute = 'um_smdpl_precompute_wl_demo.npy'"
@@ -133,7 +63,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "806306"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(um_mock)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +103,7 @@
      "text": [
       "#   The simulation particle mass is 96300000.000000\n",
       "#   The number of particles is 56623104000\n",
-      "Total runtime for 10 galaxies and 5.0e+07 particles =13.40 seconds\n"
+      "Total runtime for 500 galaxies and 5.0e+07 particles =35.58 seconds\n"
      ]
     }
    ],
@@ -164,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +123,7 @@
      "text": [
       "#   The simulation particle mass is 96300000.000000\n",
       "#   The number of particles is 56623104000\n",
-      "Total runtime for 10 galaxies and 1.0e+07 particles =1.91 seconds\n"
+      "Total runtime for 500 galaxies and 1.0e+07 particles =6.38 seconds\n"
      ]
     }
    ],
@@ -287,17 +237,32 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   },
   "nav_menu": {},
   "toc": {
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "navigate_num": "#000000",
+    "navigate_text": "#333333",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700",
+    "sidebar_border": "#EEEEEE",
+    "wrapper_background": "#FFFFFF"
+   },
+   "moveMenuLeft": true,
+   "nav_menu": {
+    "height": "12px",
+    "width": "252px"
+   },
    "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
-   "threshold": 6,
+   "threshold": 4,
    "toc_cell": false,
    "toc_section_display": "block",
-   "toc_window_display": false
+   "toc_window_display": false,
+   "widenNotebook": false
   }
  },
  "nbformat": 4,
