Make catalogs for Enia, and demo files for prepare UM data

--- a/note/um_smdpl_organize_gal_catalog.ipynb
+++ b/note/um_smdpl_organize_gal_catalog.ipynb
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-01-04T18:22:35.820881Z",
-     "start_time": "2018-01-04T18:22:34.583163Z"
+     "end_time": "2018-01-05T19:43:34.212529Z",
+     "start_time": "2018-01-05T19:43:34.156211Z"
     }
    },
    "outputs": [
@@ -84,6 +84,8 @@
     "    bootstrap_smf\n",
     "from load_mdpl2_mock import value_added_smdpl_mock\n",
     "from model_predictions import total_stellar_mass_including_satellites\n",
+    "\n",
+    "from prepare_universe_machine import prep_um_catalog\n",
     "    \n",
     "from hsc_massive import \\\n",
     "    s16a_path, \\\n",
@@ -96,11 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-01-04T18:32:41.138711Z",
-     "start_time": "2018-01-04T18:32:41.117677Z"
+     "end_time": "2018-01-05T19:36:15.915316Z",
+     "start_time": "2018-01-05T19:36:15.885833Z"
     }
    },
    "outputs": [],
@@ -122,11 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-01-04T18:34:12.695638Z",
-     "start_time": "2018-01-04T18:34:06.438514Z"
+     "end_time": "2018-01-05T19:36:25.550113Z",
+     "start_time": "2018-01-05T19:36:21.634131Z"
     }
    },
    "outputs": [
@@ -142,8 +144,8 @@
    ],
    "source": [
     "# Setup environment \n",
-    "envir = s16a_path.set_env(version='astro5')\n",
-    "#envir = s16a_path.set_env(version='kungpao')\n",
+    "#envir = s16a_path.set_env(version='astro5')\n",
+    "envir = s16a_path.set_env(version='kungpao')\n",
     "\n",
     "# Folder for new UM model \n",
     "um_dir = os.path.join(envir['s16a'], 'um2/um2_new')\n",
@@ -170,11 +172,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-01-04T18:33:06.954497Z",
-     "start_time": "2018-01-04T18:33:06.015853Z"
+     "end_time": "2018-01-05T19:36:43.132070Z",
+     "start_time": "2018-01-05T19:36:26.685605Z"
     }
    },
    "outputs": [],
@@ -191,75 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "ExecuteTime": {
+     "end_time": "2018-01-05T19:44:08.186971Z",
+     "start_time": "2018-01-05T19:43:43.369110Z"
+    }
    },
-   "outputs": [],
-   "source": [
-    "def umPrepCatalog(um_mock, um_min_mvir=None, use_mvir=False):\n",
-    "    \"\"\"\n",
-    "    Prepare the UniverseMachine mock catalog.\n",
-    "\n",
-    "    The goal is to prepare a FITS catalog that include all\n",
-    "    necessary information.\n",
-    "    During the modeling part, we just need to load this catalog once.\n",
-    "    \"\"\"\n",
-    "    # Sort the catalog based on the host halo ID\n",
-    "    um_mock.sort('halo_hostid')\n",
-    "\n",
-    "    # Make a mask for central galaxies\n",
-    "    mask_central = um_mock['upid'] == -1\n",
-    "    um_mock.add_column(Column(data=mask_central,\n",
-    "                              name='mask_central'))\n",
-    "\n",
-    "    # Add a column as the BCG+ICL mass\n",
-    "    um_mock.add_column(Column(data=(um_mock['sm'] + um_mock['icl']),\n",
-    "                              name='mtot_galaxy'))\n",
-    "\n",
-    "    # Total stellar masses within a halo, including the satellites\n",
-    "    mstar_mhalo = total_stellar_mass_including_satellites(um_mock,\n",
-    "                                                          'mtot_galaxy')\n",
-    "    um_mock.add_column(Column(data=mstar_mhalo,\n",
-    "                              name='mstar_mhalo'))\n",
-    "\n",
-    "    # Add log10(Mass)\n",
-    "    # Stellar mass\n",
-    "    um_mock.add_column(Column(data=np.log10(um_mock['sm']),\n",
-    "                              name='logms_gal'))\n",
-    "    um_mock.add_column(Column(data=np.log10(um_mock['icl']),\n",
-    "                              name='logms_icl'))\n",
-    "    um_mock.add_column(Column(data=np.log10(um_mock['mtot_galaxy']),\n",
-    "                              name='logms_tot'))\n",
-    "    um_mock.add_column(Column(data=np.log10(um_mock['mstar_mhalo']),\n",
-    "                              name='logms_halo'))\n",
-    "    # Halo mass\n",
-    "    um_mock.add_column(Column(data=np.log10(um_mock['mvir']),\n",
-    "                              name='logmh_vir'))\n",
-    "    um_mock.add_column(Column(data=np.log10(um_mock['mpeak']),\n",
-    "                              name='logmh_peak'))\n",
-    "    um_mock.add_column(Column(data=np.log10(um_mock['host_halo_mvir']),\n",
-    "                              name='logmh_host'))\n",
-    "    \n",
-    "    um_mock.rename_column('host_halo_mvir', 'mhalo_host')\n",
-    "\n",
-    "    if um_min_mvir is not None:\n",
-    "        if use_mvir:\n",
-    "            um_mock_use = um_mock[um_mock['logmh_vir'] >= um_min_mvir]\n",
-    "        else:\n",
-    "            um_mock_use = um_mock[um_mock['logmh_host'] >= um_min_mvir]\n",
-    "    else:\n",
-    "        um_mock_use = um_mock\n",
-    "\n",
-    "    return um_mock_use"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -271,8 +211,8 @@
     }
    ],
    "source": [
-    "um_smdpl_old_all_vagc = umPrepCatalog(um_smdpl_old_all, um_min_mvir=11.5)\n",
-    "um_smdpl_new_all_vagc = umPrepCatalog(um_smdpl_new_all, um_min_mvir=11.5)\n",
+    "um_smdpl_old_all_vagc = prep_um_catalog(um_smdpl_old_all, um_min_mvir=11.5)\n",
+    "um_smdpl_new_all_vagc = prep_um_catalog(um_smdpl_new_all, um_min_mvir=11.5)\n",
     "\n",
     "print(um_smdpl_new_all_vagc.colnames)\n",
     "print(len(um_smdpl_new_all_vagc))"
@@ -280,8 +220,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-01-05T19:45:28.724580Z",
+     "start_time": "2018-01-05T19:44:08.191245Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Save the results\n",
@@ -316,8 +261,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-01-05T19:45:29.744202Z",
+     "start_time": "2018-01-05T19:45:28.728911Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -336,8 +286,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-01-05T19:45:35.351512Z",
+     "start_time": "2018-01-05T19:45:29.747538Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Save the results\n",
@@ -379,17 +334,32 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   },
   "nav_menu": {},
   "toc": {
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "navigate_num": "#000000",
+    "navigate_text": "#333333",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700",
+    "sidebar_border": "#EEEEEE",
+    "wrapper_background": "#FFFFFF"
+   },
+   "moveMenuLeft": true,
+   "nav_menu": {
+    "height": "99px",
+    "width": "252px"
+   },
    "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
    "threshold": 4,
    "toc_cell": false,
    "toc_section_display": "block",
-   "toc_window_display": false
+   "toc_window_display": false,
+   "widenNotebook": false
   }
  },
  "nbformat": 4,
