post meeting with alexie - added TODOs

--- a/cb/main.ipynb
+++ b/cb/main.ipynb
@@ -28,8 +28,19 @@
     "    * Actually I am not sure. This seems like it will introduce error because of bin width?\n",
     "    * Maybe I should always be plotting the ratio\n",
     "    * I think I should always be plotting the ratio\n",
-    "* half_mass_scale_a is probbaly for the dark matter - get the equivalent for the galaxy\n",
-    "    * Unclear how to get this. I don't see it in the catalogs in an obvious place. Would expect in https://github.com/dr-guangtou/hsc_um2/blob/master/scripts/reduce_um_data_size.py"
+    "    * See next point\n",
+    "* Take our plot of M_halo vs M_star and\n",
+    "    * make it a shaded plot rather than the pointy plot that it is\n",
+    "    * cut it at mhalo = 13\n",
+    "    * fit the mean using a formula given in Alexie's paper https://arxiv.org/pdf/1103.2077.pdf and https://files.slack.com/files-pri/T5WPLGLAF-F8QCPD9SL/image.png\n",
+    "    * Then when plotting scatter, plot scatter as X - expected(X) where expected comes from the fit.\n",
+    "    * This should remove the binning effect.\n",
+    "* half_mass_scale_a is probbaly for the dark matter this is now OK\n",
+    "* https://github.com/dr-guangtou/hsc_um2/blob/master/scripts/reduce_um_data_size.py\n",
+    "* In the line plot \n",
+    "    * cbx make this a 2 panel figure\n",
+    "    * use current halo mass\n",
+    "    * truncate at 13"
    ]
   },
   {
@@ -246,7 +257,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -260,7 +270,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "hidden": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -346,7 +355,9 @@
     "    5: cluster_sum.centrals_with_satellites(centrals, satellites, 5),\n",
     "    9: cluster_sum.centrals_with_satellites(centrals, satellites, 9),\n",
     "    \"all\": cluster_sum.centrals_with_satellites(centrals, satellites, 0.9999),\n",
-    "}"
+    "}\n",
+    "# cbx do above figure with shaded not points\n",
+    "# look in old alexie/peter paper to get functional form for M* Mhalo and fit them."
    ]
   },
   {
@@ -400,7 +411,11 @@
     "    [data[0], data[1], data[2], data[5], data[9], data[\"all\"]],\n",
     "    \"sm\",\n",
     "    labels = [\"Only central\", \"+1 satellite\", \"+2 satellites\", \"+5 satellites\", \"+9 satellites\", \"+All satellites\"],\n",
-    ")"
+    ")\n",
+    "# cbx make this a 2 panel figure\n",
+    "# use current halo mass\n",
+    "# truncate at 13\n",
+    "# add figure y: Mhalo x: M* (halo > 13)"
    ]
   },
   {
@@ -786,7 +801,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Major Mergers"
    ]
@@ -795,6 +812,7 @@
    "cell_type": "code",
    "execution_count": 296,
    "metadata": {
+    "hidden": true,
     "hideCode": true,
     "hidePrompt": true
    },
